tests/NormalTests/paczka1/fuzzy1/68314052.err
Error in line 18: 4rG6W5hh S827 83,1
Error in line 17: mTRBRW S422 19,3
Error in line 33: mTRBRW A951 0,9
Error in line 39: zdEngjof S827 52,89
